--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-body{
+body
+{
  background: linear-gradient(#e66465, #9198e5);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
+ font-size:20px;
 }
-.header{
+.header
+{
     background-color:black;
     position: relative;
 }
-.heading{
+.heading
+{
     text-align:center;
     color:#fff;
     text-decoration: underline;
@@ -19,15 +23,17 @@ body{
     width:95%;
     
 }
-.navbar .list .list-item{
+.navbar .list .list-item
+{
     display: table-cell;
     text-align: center;
     vertical-align: middle;
 }
-.navbar .list .list-item .nav-link{
+.navbar .list .list-item .nav-link
+{
     text-decoration: none;
     color:inherit;
-    font-size: 18px;
+    font-size: 1rem;
 }
 .nav-link:hover{
     color:blue !important;
@@ -36,7 +42,8 @@ body{
 .font-bold{
     font-weight: bold;
 }
-.sec1 .sec1-desc .desc-name{
+.sec1 .sec1-desc .desc-name
+{
     text-align:center;
 }
 .desc-body{
@@ -48,130 +55,173 @@ body{
     color:black;
 
 }
-.sec1 iframe{
+.sec1 .iframe
+{
     width:50%; 
-    height:200px;
+    height:10rem;
 }
-.heading-skills{
+.heading-skills
+{
     text-align: center;
     background-color: black;
     color:#fff;
     text-decoration: underline;
 }
-.skills-desc{
+.skills-desc
+{
     display: table;
     width:100%;
     text-align: center;
     vertical-align: middle;
-    border-spacing: 10px;
+    border-spacing: .5rem;
     border-collapse: separate;
 }
-.col-1{
+.col-1
+{
     display:table-cell;
     width:33%;
 }
-.col-2{
+.col-2
+{
     display:table-cell;
     width:33%;
 }
-.col-3{
+.col-3
+{
     display:table-cell;
     width:33%;
 }
-.text-center{
+.text-center
+{
     text-align: center;
 }
-.head-html{
+.head-html
+{
     text-decoration: underline;
 }
-.head-css{
+.head-css
+{
     text-decoration: underline;
 }
-.head-js{
+.head-js
+{
     text-decoration: underline;
 }
-.table-row{
+.table-row
+{
     display: table-row;
 }
-.col-4{
+.col-4
+{
     display: table-cell;
 }
-.col-5{
+.col-5
+{
     display: table-cell;
 }
-.col-6{
+.col-6
+{
     display: table-cell;
 }
-.progress-html{
-height:30px;
+.progress-html
+{
+height:1.5rem;
 width:80%;
 background-color:yellow;
 text-align:right;
 vertical-align: middle; 
 }
-.progress-css{
-    height:30px;
+.progress-css
+{
+    height:1.5rem;
     width:80%;
     background-color:yellow;
     text-align:right; 
     vertical-align: middle; 
 }
-.progress-js{
-height:30px;
+.progress-js
+{
+height:1.5rem;
 width:80%;
 background-color:yellow;
 text-align:right;
 vertical-align: middle; 
 }
-.work-table{
+.work-table
+{
     display: table;
     width: 100%
 }
-.work-table .work-table-row{
+.work-table .work-table-row
+{
     display: table-row;
     width: 100%;
 }
-.work-table-row .work-col-1{
+.work-table-row .work-col-1
+{
     display: table-cell;
     vertical-align: middle;
     width: 30%;
 }
-.work-table-row .work-col-2{
+.work-table-row .work-col-2
+{
     display: table-cell;
     text-align:center;
     vertical-align: middle;
     width: 70%;
 }
-.work-list{
+.work-list
+{
     list-style: none;
 }
-.work-list .work-list-item .work-list-link{
+.work-list .work-list-item .work-list-link
+{
     color:inherit;
     text-decoration: none;
 }
 .footer{
     background-color:#000;
 }
-.footer-head{
+.footer-head
+{
     display: table;
     width:100%;
 }
-.footer-col-1{
+.footer-col-1
+{
     display:table-cell;
     text-align: center;
     vertical-align: middle;
 }
 
-.footer-head i{
+.footer-head i
+{
     color:gray;
 }
-.footer-head .contact-info{
+.footer-head .contact-info
+{
     color:gray;
 }
-.contact-link{
+.contact-link
+{
     color:gray;
     text-decoration:none;
 }
-.footer-head .footer-col-1:hover > i, .contact-link{
+.footer-head .footer-col-1:hover > i, .contact-link
+{
     color:#fff;
+}
+.work-col-2-inner .work-img
+{
+    height:10rem;
+    width:21.75rem;
+}
+.work-list .work-list-item .work-list-link
+{
+    font-size:1.2rem;
+}
+.hr-line{
+    height: .15rem;
+    width:100%;
+    background-color: #000;
 }
