grid template added

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,16 @@
     font-family: "Poppins","sans-serif";
     background-color: #ffffff;
 }
+.navbar-top{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    justify-content: center;
+}
 .top-nav-list{
     list-style: none;
+    align-self: end;
+    justify-self: end;
 }
 .top-nav-list .top-nav-item{
     display: inline-block;
@@ -24,6 +32,31 @@
 }
 .time-sheet-btn .custom-btn-timesheet{
     background-color:#00aacb;
+}
+.container-outer
+{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: minmax(100px,auto);
+    grid-template-areas: 
+    " projects projects notification"
+    "timesheet timesheet notification" 
+}
+.container-inner-proj
+{
+    grid-area: projects;
+}
+.projects-item-row{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.container-inner
+{
+    grid-area: timesheet;
+}
+.notification-aside
+{
+    grid-area: notification;
 }
 .project-desc-clock .clock-proj{
     font-weight: bold;
